@@ -1,32 +1,28 @@
 package ua.com.fielden.platform.entity;
 
-import static java.util.Optional.of;
-import static java.util.stream.Collectors.toCollection;
-import static java.util.stream.Collectors.toList;
-import static java.util.stream.Collectors.toMap;
-import static ua.com.fielden.platform.entity.query.fluent.EntityQueryUtils.fetchKeyAndDescOnly;
-import static ua.com.fielden.platform.entity.query.fluent.EntityQueryUtils.from;
-import static ua.com.fielden.platform.entity.query.fluent.EntityQueryUtils.select;
+import com.google.inject.Inject;
+import ua.com.fielden.platform.dao.CommonEntityDao;
+import ua.com.fielden.platform.dao.annotations.SessionRequired;
+import ua.com.fielden.platform.entity.annotation.EntityType;
+import ua.com.fielden.platform.security.Authorise;
+import ua.com.fielden.platform.security.provider.ISecurityTokenNodeTransformation;
+import ua.com.fielden.platform.security.provider.ISecurityTokenProvider;
+import ua.com.fielden.platform.security.provider.SecurityTokenNode;
+import ua.com.fielden.platform.security.tokens.security_matrix.SecurityRoleAssociation_CanRead_Token;
+import ua.com.fielden.platform.security.user.SecurityRoleAssociation;
+import ua.com.fielden.platform.security.user.SecurityRoleAssociationCo;
+import ua.com.fielden.platform.security.user.UserRole;
 
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Stream;
 
-import com.google.inject.Inject;
-
-import ua.com.fielden.platform.dao.CommonEntityDao;
-import ua.com.fielden.platform.dao.annotations.SessionRequired;
-import ua.com.fielden.platform.entity.annotation.EntityType;
-import ua.com.fielden.platform.entity.query.IFilter;
-import ua.com.fielden.platform.entity.query.model.EntityResultQueryModel;
-import ua.com.fielden.platform.security.provider.ISecurityTokenNodeTransformation;
-import ua.com.fielden.platform.security.provider.ISecurityTokenProvider;
-import ua.com.fielden.platform.security.provider.SecurityTokenNode;
-import ua.com.fielden.platform.security.user.SecurityRoleAssociationCo;
-import ua.com.fielden.platform.security.user.SecurityRoleAssociation;
-import ua.com.fielden.platform.security.user.UserRole;
+import static java.util.Comparator.comparing;
+import static java.util.Optional.of;
+import static java.util.stream.Collectors.toCollection;
+import static java.util.stream.Collectors.toMap;
+import static ua.com.fielden.platform.entity.query.fluent.EntityQueryUtils.*;
 
 @EntityType(SecurityMatrixInsertionPoint.class)
 public class SecurityMatrixInsertionPointDao extends CommonEntityDao<SecurityMatrixInsertionPoint> implements SecurityMatrixInsertionPointCo {
@@ -35,25 +31,29 @@ public class SecurityMatrixInsertionPointDao extends CommonEntityDao<SecurityMat
     private final ISecurityTokenNodeTransformation tokenTransformation;
 
     @Inject
-    public SecurityMatrixInsertionPointDao(final IFilter filter,
+    protected SecurityMatrixInsertionPointDao(
             final ISecurityTokenNodeTransformation tokenTransformation,
-            final ISecurityTokenProvider securityTokenProvider) {
-        super(filter);
+            final ISecurityTokenProvider securityTokenProvider)
+    {
         this.tokenProvider = securityTokenProvider;
         this.tokenTransformation = tokenTransformation;
     }
 
     @Override
     @SessionRequired
+    @Authorise(SecurityRoleAssociation_CanRead_Token.class)
     public SecurityMatrixInsertionPoint save(final SecurityMatrixInsertionPoint entity) {
-        final List<SecurityTokenTreeNodeEntity> tokenEntities = tokenTransformation.transform(tokenProvider.getTopLevelSecurityTokenNodes()).stream().map(token -> createTokenNodeEntity(Optional.empty(), token)).collect(toList());
-        final EntityResultQueryModel<UserRole> userRoleQueryModel = select(UserRole.class).model();
-        try (final Stream<UserRole> stream = co(UserRole.class).stream(from(userRoleQueryModel).with(fetchKeyAndDescOnly(UserRole.class)).model())) {
-            entity.setUserRoles(stream.collect(toList()));
-        }
+        final var tokenEntities = tokenTransformation.transform(tokenProvider.getTopLevelSecurityTokenNodes()).stream()
+                                  .map(token -> createTokenNodeEntity(Optional.empty(), token)).toList();
+        final var userRoleQueryModel = select(UserRole.class).model();
+        entity.setUserRoles(co(UserRole.class).getAllEntities(from(userRoleQueryModel).with(fetchKeyAndDescOnly(UserRole.class)).model()));
         entity.setTokens(tokenEntities);
         final SecurityRoleAssociationCo coTokenRoleAssociation = co(SecurityRoleAssociation.class);
-        final Map<String, List<Long>> tokenRoleMap = coTokenRoleAssociation.findAllAssociations().entrySet().stream().collect(toMap(entry -> entry.getKey().getName(), entry -> entry.getValue().stream().map(UserRole::getId).collect(toList())));
+        final Map<String, List<Long>> tokenRoleMap = coTokenRoleAssociation.findAllAssociations().entrySet().stream()
+                .collect(toMap(
+                        entry -> entry.getKey().getName(),
+                        entry -> entry.getValue().stream().map(UserRole::getId).toList()
+                ));
         entity.setTokenRoleMap(tokenRoleMap)
               .setCalculated(true)
               .setRoleFilter("")
@@ -63,8 +63,12 @@ public class SecurityMatrixInsertionPointDao extends CommonEntityDao<SecurityMat
 
     private SecurityTokenTreeNodeEntity createTokenNodeEntity(final Optional<SecurityTokenTreeNodeEntity> parentNode, final SecurityTokenNode tokenNode) {
         final SecurityTokenTreeNodeEntity tokenTreeNode = new SecurityTokenTreeNodeEntity();
+        final var childrenNodes = tokenNode.daughters().stream().map(child -> createTokenNodeEntity(of(tokenTreeNode), child))
+                                  // Ensure that child nodes are always sorted by the title.
+                                  .sorted(comparing(SecurityTokenTreeNodeEntity::getTitle))
+                                  .collect(toCollection(LinkedHashSet::new));
         tokenTreeNode.setParent(parentNode.orElse(null))
-                     .setChildren(tokenNode.daughters().stream().map(child -> createTokenNodeEntity(of(tokenTreeNode), child)).collect(toCollection(LinkedHashSet::new)))
+                     .setChildren(childrenNodes)
                      .setTitle(tokenNode.getShortDesc())
                      .setKey(tokenNode.getToken().getName())
                      .setDesc(tokenNode.getLongDesc());
