@@ -1,36 +1,40 @@
 package ua.com.fielden.platform.entity;
 
-import static ua.com.fielden.platform.entity.query.fluent.EntityQueryUtils.fetchKeyAndDescOnly;
-import static ua.com.fielden.platform.entity.query.fluent.EntityQueryUtils.from;
-import static ua.com.fielden.platform.entity.query.fluent.EntityQueryUtils.select;
-
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
-
 import com.google.inject.Inject;
-
 import ua.com.fielden.platform.dao.CommonEntityDao;
 import ua.com.fielden.platform.dao.annotations.SessionRequired;
 import ua.com.fielden.platform.entity.annotation.EntityType;
-import ua.com.fielden.platform.entity.query.IFilter;
+import ua.com.fielden.platform.entity.exceptions.InvalidStateException;
 import ua.com.fielden.platform.entity.query.model.EntityResultQueryModel;
 import ua.com.fielden.platform.error.Result;
 import ua.com.fielden.platform.security.ISecurityToken;
-import ua.com.fielden.platform.security.SecurityRoleAssociationBatchAction;
-import ua.com.fielden.platform.security.user.SecurityRoleAssociationCo;
+import ua.com.fielden.platform.security.provider.ISecurityTokenProvider;
+import ua.com.fielden.platform.security.tokens.security_matrix.SecurityRoleAssociation_CanRead_Token;
+import ua.com.fielden.platform.security.tokens.security_matrix.SecurityRoleAssociation_CanSave_Token;
+import ua.com.fielden.platform.security.user.IUserProvider;
 import ua.com.fielden.platform.security.user.SecurityRoleAssociation;
+import ua.com.fielden.platform.security.user.SecurityRoleAssociationCo;
 import ua.com.fielden.platform.security.user.UserRole;
 
+import java.util.*;
+import java.util.stream.Stream;
+
+import static java.util.stream.Collectors.*;
+import static ua.com.fielden.platform.entity.AbstractEntity.KEY;
+import static ua.com.fielden.platform.entity.query.fluent.EntityQueryUtils.*;
+import static ua.com.fielden.platform.error.Result.failure;
+import static ua.com.fielden.platform.error.Result.successful;
+
 @EntityType(SecurityMatrixSaveAction.class)
-public class SecurityMatrixSaveActionDao extends CommonEntityDao<SecurityMatrixSaveAction> implements SecurityMatrixSaveActionCo{
+public class SecurityMatrixSaveActionDao extends CommonEntityDao<SecurityMatrixSaveAction> implements SecurityMatrixSaveActionCo {
+
+    private final ISecurityTokenProvider securityTokenProvider;
+    private final IUserProvider userProvider;
 
     @Inject
-    protected SecurityMatrixSaveActionDao(final IFilter filter) {
-        super(filter);
+    protected SecurityMatrixSaveActionDao(final ISecurityTokenProvider securityTokenProvider, final IUserProvider userProvider) {
+        this.securityTokenProvider = securityTokenProvider;
+        this.userProvider = userProvider;
     }
 
     @Override
@@ -38,47 +42,88 @@ public class SecurityMatrixSaveActionDao extends CommonEntityDao<SecurityMatrixS
     public SecurityMatrixSaveAction save(final SecurityMatrixSaveAction entity) {
         final Map<Long, UserRole> idRoleMap = getUserRoles(entity);
         if (!idRoleMap.isEmpty()) {
-            final Set<SecurityRoleAssociation> addedAssociations = entity.getAssociationsToSave().entrySet().stream()
+            final var associationsToAdd = entity.getAssociationsToSave().entrySet().stream()
                 .map(entry -> createSecurityRoleAssociations(entry.getKey(), entry.getValue(), idRoleMap))
                 .flatMap(List::stream)
-                .collect(Collectors.toSet());
-            final Set<SecurityRoleAssociation> removedAssociations = entity.getAssociationsToRemove().entrySet().stream()
-                    .map(entry -> createSecurityRoleAssociations(entry.getKey(), entry.getValue(), idRoleMap))
-                    .flatMap(List::stream)
-                    .collect(Collectors.toSet());
-            final SecurityRoleAssociationBatchAction batchAction = new SecurityRoleAssociationBatchAction();
-            batchAction.setSaveEntities(addedAssociations);
-            batchAction.setRemoveEntities(removedAssociations);
-            co$(SecurityRoleAssociationBatchAction.class).save(batchAction);
+                .collect(toSet());
+            final var assocationsToRemove = entity.getAssociationsToRemove().entrySet().stream()
+                .map(entry -> createSecurityRoleAssociations(entry.getKey(), entry.getValue(), idRoleMap))
+                .flatMap(List::stream)
+                .collect(toSet());
+            // Set empty associations for both save and remove operations to prevent client-side conversion errors if the save fails.
+            entity.setAssociationsToRemove(Map.of()).setAssociationsToSave(Map.of());
+            validateSecurityMatrixLockout(assocationsToRemove).ifFailure(Result::throwRuntime);
+            // Save associations.
+            final SecurityRoleAssociationCo co$Association = co$(SecurityRoleAssociation.class);
+            co$Association.addAssociations(associationsToAdd);
+            co$Association.removeAssociations(assocationsToRemove);
         }
-        return super.save(entity.setAssociationsToRemove(new HashMap<>()).setAssociationsToSave(new HashMap<>()));
+        return super.save(entity);
+    }
+
+    /// Returns a validation failure if, as a result of removing `associations`, the current user would lock themselves out of the Security Matrix
+    /// (either by removing Security Matrix reading or saving privileges for themselves).
+    ///
+    private Result validateSecurityMatrixLockout(final Set<SecurityRoleAssociation> associationsToRemove) {
+        // Check whether the associations to be removed include any associations related to Security Matrix tokens.
+        if (hasSecurityMatrixRelatedAssociations(associationsToRemove)) {
+            final var msgBuilder = new StringBuilder();
+
+            final SecurityRoleAssociationCo coAssociation = co(SecurityRoleAssociation.class);
+            final var qCurrUserAssociations = coAssociation.selectActiveAssociations(
+                    userProvider.getUser(),
+                    SecurityRoleAssociation_CanRead_Token.class,
+                    SecurityRoleAssociation_CanSave_Token.class);
+            final var currUserAssociations = coAssociation.getAllEntities(from(qCurrUserAssociations).with(fetchNone(SecurityRoleAssociation.class).with(KEY)).model()).stream()
+                                             .collect(groupingBy(SecurityRoleAssociation::getSecurityToken));
+            // Is the user about to remove all associations between their roles and SecurityRoleAssociation_CanRead_Token?
+            final var currUserReadAssociations = currUserAssociations.getOrDefault(SecurityRoleAssociation_CanRead_Token.class, List.of());
+            if (!currUserReadAssociations.isEmpty() && associationsToRemove.containsAll(currUserReadAssociations)) {
+                msgBuilder.append(ERR_CAN_NOT_DELETE_ASSOCIATIONS_FOR_READING);
+            }
+            // Is the user about to remove all associations between their roles and SecurityRoleAssociation_CanSave_Token?
+            final var currUserSaveAssociations = currUserAssociations.getOrDefault(SecurityRoleAssociation_CanSave_Token.class, List.of());
+            if (!currUserSaveAssociations.isEmpty() && associationsToRemove.containsAll(currUserSaveAssociations)) {
+                if (!msgBuilder.isEmpty()) {
+                    msgBuilder.append("<br>");
+                }
+                msgBuilder.append(ERR_CAN_NOT_DELETE_ASSOCIATIONS_FOR_SAVING);
+            }
+
+            return msgBuilder.isEmpty() ? successful() : failure(msgBuilder.toString());
+        }
+        else {
+            return successful();
+        }
+    }
+
+    private boolean hasSecurityMatrixRelatedAssociations(final Collection<SecurityRoleAssociation> associations) {
+        return associations.stream()
+                .anyMatch(association -> SecurityRoleAssociation_CanSave_Token.class.equals(association.getSecurityToken())
+                                         || SecurityRoleAssociation_CanRead_Token.class.equals(association.getSecurityToken()));
     }
 
     private List<SecurityRoleAssociation> createSecurityRoleAssociations(final String securityToken, final List<Integer> roleIds, final Map<Long, UserRole> idRoleMap) {
         final Class<? extends ISecurityToken> token = loadToken(securityToken);
-        final SecurityRoleAssociationCo associationCo = co$(SecurityRoleAssociation.class);
-        return roleIds.stream().map(id -> associationCo.new_().setRole(idRoleMap.get(Long.valueOf(id.longValue()))).setSecurityToken(token)).collect(Collectors.toList());
+        final SecurityRoleAssociationCo co$Association = co$(SecurityRoleAssociation.class);
+        return roleIds.stream().map(id -> co$Association.new_().setRole(idRoleMap.get(id.longValue())).setSecurityToken(token)).toList();
     }
 
     private Map<Long, UserRole> getUserRoles(final SecurityMatrixSaveAction entity) {
         final Set<Integer> userRoleIds = Stream.concat(entity.getAssociationsToSave().values().stream().flatMap(List::stream),
-                                    entity.getAssociationsToRemove().values().stream().flatMap(List::stream)).collect(Collectors.toSet());
+                                    entity.getAssociationsToRemove().values().stream().flatMap(List::stream)).collect(toSet());
         if (!userRoleIds.isEmpty()) {
             final EntityResultQueryModel<UserRole> userRolesQuery = select(UserRole.class).where().prop("id").in().values(userRoleIds.toArray()).model();
             try (Stream<UserRole> stream = co(UserRole.class).stream(from(userRolesQuery).with(fetchKeyAndDescOnly(UserRole.class)).model())) {
-                return stream.collect(Collectors.toMap(UserRole::getId, role -> role));
+                return stream.collect(toMap(UserRole::getId, role -> role));
             }
         }
         return new HashMap<>();
     }
 
-    private Class<? extends ISecurityToken> loadToken(final String name) {
-        final Class<? extends ISecurityToken> token;
-        try {
-            token = (Class<? extends ISecurityToken>) Class.forName(name);
-        } catch (final ClassNotFoundException e) {
-            throw Result.failure(new IllegalStateException(String.format("Security token [%s] could not be found.", name)));
-        }
-        return token;
+    private Class<? extends ISecurityToken> loadToken(final String tokenClassSimpleName) {
+        return securityTokenProvider.getTokenByName(tokenClassSimpleName)
+                .orElseThrow(() -> failure(new InvalidStateException(ERR_SECURITY_TOKEN_NOT_FOUND.formatted(tokenClassSimpleName))));
     }
+
 }
